# DataScienceMastersDegree

./: 2019.csv
machine_learning/: Clustering Tutorial Level Expert - CLU103.ipynb  Clustering Tutorial Level Intermediate - CLU102.ipynb  Final Kmeans Model 08Feb2020.pkl  PyCaret 2 Clustering.ipynb  kmeans.pkl  pyproject.toml
machine_learning/1-3/: Binary Classification Tutorial Level Beginner -  CLF101.ipynb  Final RF Model 08Feb2020.pkl  Untitled.ipynb
machine_learning/1-3/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
machine_learning/machine_learning/: Cancer.ipynb  genetic_algorithm.ipynb  genetic_small.ipynb
machine_learning/mlruns/0/: meta.yaml
machine_learning/mlruns/1/: meta.yaml
machine_learning/tests/: test_machine_learning.py
machine_learning_with_images/: pyproject.toml
machine_learning_with_images/notebooks/: (dos firmas) 1-3 DESCUBRIMIENTO DE CONOCIMIENTOS EN BASE DE DATOS.ipynb  (sintéticos) 1-3 DESCUBRIMIENTO DE CONOCIMIENTOS EN BASE DE DATOS .ipynb  1-2 DESCUBRIMIENTO DE CONOCIMIENTOS EN BASE DE DATOS.ipynb  1-3 DESCUBRIMIENTO DE CONOCIMIENTOS EN BASE DE DATOS.ipynb  Extract_signature.ipynb  PyCaret 2 Classification.ipynb  PyCaret 2 Clustering.ipynb  best-model-dos-firmas.pkl  best-model-sintetico.pkl  best-model.pkl  datos_finales.csv  datos_finales.xls  datos_intermedios.csv  test.xls
machine_learning_with_images/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
statistics/: pyproject.toml
statistics/notebooks/: 1-2.ipynb  1-3.ipynb  1-4.ipynb  1-5.ipynb  13-3.ipynb  2-1.ipynb  226.csv  227.csv  3-1.ipynb  3-2.ipynb  3.11.1.csv  3.11.37.csv  3.11.8.csv  3.12.1.csv  3.2.12.28.csv  3.2.12.34.csv  3.3.13.2.csv  3107.csv  354.csv  359.csv  35a.csv  35b.csv  362.csv  373.csv  376a.csv  376b.csv  389.csv  4-1.ipynb  4-3.ipynb  4.1.10.csv  4.1.11.csv  4.3.17.26.csv  4.3.17.34.csv  4.3.17.49.csv  4.3.17.55.csv  4.3.17.62.csv  914.csv  Presentation1.pptx  bar_pandas_groupby_nested.html  census.txt  (+3 more)
statistics/tests/: test_statistics.py
time_series/: README.md  pyproject.toml
time_series/notebooks/: 1-2.ipynb  1-3.ipynb  2004.csv  2005.csv  2006.csv  2008.csv  2010.csv  2011.csv  2012.csv  2013.csv  2014.csv  2016.csv  2017.csv  2018.csv  2018.xlsx  2019.csv  2020.csv  Book2.xlsx  Construccion_de_modelo.ipynb  Construccion_de_modelo_10_years.ipynb  Construccion_de_modelo_large.ipynb  Final KNN Model 08Feb2020.pkl  Final ada Model 08Feb2020.pkl  Final catboost Model 08Feb2020.pkl  Final gbc Model 08Feb2020.pkl  Final lr Model 08Feb2020.pkl  Final rf Model 08Feb2020.pkl  Minar_Spotify.ipynb  Timeseries.ipynb  best.pkl  final.csv  final_acceptable-Copy1.ipynb  final_acceptable.ipynb  practicing.ipynb  second.pkl  third.pkl  training.csv  training2.csv  training3.csv  training4.csv  (+2 more)
time_series/notebooks/data/: 2003.csv  2007.csv  (+2 more)
time_series/tests/: test_time_series.py
(+5382 files in other folders)
