[tool.poetry]
name = "machine_learning"
version = "0.1.0"
description = ""
authors = ["John Smith <john@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
deap = "^1.3.1"
pandas = "^1.1.0"
matplotlib = "<3.3.0"
pycaret = "^2.0"
awscli = "^1.18.120"
recordlinkage = "^0.14"
keras = "^2.4.3"
TensorFlow = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
