[tool.poetry]
name = "machine_learning_with_images"
version = "0.1.0"
description = "Creating a ML model from signatures from cheques"
authors = ["oswaldo gomez <osw.gom89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python-headless = "^4.4.0"
numpy = "^1.19.2"
pandas = "^1.1.2"
pycaret = "^2.1.2"
jupyter = "^1.0.0"
scipy = "^1.5.2"
xlwt = "^1.3.0"
xlrd = "^1.2.0"
shap = "^0.36.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
