[tool.poetry]
name = "statistics"
version = "0.1.0"
description = ""
authors = ["oswaldo.gomez@spglobal.com <oswaldo.gomez@spglobal.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.15.0"
jupyter = "^1.0.0"
pandas = "^1.0.5"
matplotlib = "^3.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
