[tool.poetry]
name = "time_series"
version = "0.1.0"
description = ""
authors = ["Oswaldo <osw.gom89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pycaret = "^2.2"
boto3 = "^1.16.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
